Fix for BUG#3871: a slave must always replicate a statement, even if it examines more than 4G rows, so we set SQL_BIG_SELECTS to 1.

sql/slave.cc:
  The slave SQL thread must always have SQL_BIG_SELECTS=1, so that it does not fail to replicate an INSERT SELECT
  examining more than 4 billion rows (for client threads, SQL_BIG_SELECTS is automatically set to 1 if
  max_join_size is 4G, but that's in handle_one_connection, so not for the slave thread).